# gesetze-im-de-bundestag

./: .gitignore  CNAME  README.md  gesetze.json  index.html  pyproject.toml  tagesordnung.json
.github/workflows/: publish.yml
assets/: index-02f5fbe7.js  index-091a80b1.js  index-20812f99.js  index-25b2811f.js  index-2aa8462d.js  index-30ecefd1.js  index-75fea7b7.js  index-810f87a2.js  index-BNQUikyV.js  index-BQZUkgS4.css  index-a6630edb.js  index-c2673df3.js
scripts/: analyze_dip.ipynb  dump.py
web/: eslint.config.cjs  index.html  package-lock.json  package.json  vite.config.ts
web/public/: gesetze.json
web/src/: App.css  App.test.tsx  App.tsx  vite-env.d.ts
