[tool.poetry]
name = "gesetze-im-de-bundestag"
version = "0.1.0"
description = ""
authors = ["Tobias Specht <specht.tobias@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.0"
polars = "^0.19.00"
matplotlib = "^3.7.1"
pyarrow = "^13.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
